# Ai-Brain

./: .gitignore  .obsidianignore  CLAUDE.md  LMSTUDIO-SETUP.md  README.md  ROADMAP.md  WINDOWS-SETUP.md  brain-setup.py  brain-uninstall.py  setup-linux.sh  setup-mac.sh  setup-windows.ps1  uninstall-linux.sh  uninstall-mac.sh  uninstall-windows.ps1
Brain/: README.md  _index.md
Brain/_setup/: setup-mac.sh
Brain/_setup/hooks/: _common.py  pre_compact.py  session_end.py  session_start.py  stop.py
Brain/_setup/mcp-server/brain_mcp/: __init__.py  __main__.py  server.py
Brain/_setup/templates/: mcp.json
Brain/_setup/templates/skills/brain/: SKILL.md
Brain/user/: preferred-ides.md  profile.md
hooks/: _checkpoint.py  _common.py  _savesig.py  session_start.py  stop.py  user_prompt_submit.py
mcp-server/: pyproject.toml
mcp-server/brain_mcp/: brain_prep.py  compact.py  doctor.py  embed.py  server.py  vault.py
templates/: global-CLAUDE.md  settings.hooks.json  settings.hooks.win.json
